# sinapsis-retina-face-trt

./: .gitignore  .pre-commit-config.yaml  README.es.md  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile-dev  compose.yaml  compose_apps.yaml  compose_sinapsis.yaml
src/sinapsis_retina_face_trt/configs/: face_comparison.yaml  face_detection.yml  face_detection_from_dir.yml  face_recognition.yml  face_verification.yml  face_verification_from_gallery.yml
src/sinapsis_retina_face_trt/helpers/: tags.py
src/sinapsis_retina_face_trt/templates/: __init__.py  embedding_comparison.py
src/sinapsis_retina_face_trt/templates/retina_face/: deepface_face_recognition.py  deepface_face_recognition_dev.py  face_verification_from_gallery.py  pytorch_embedding_search_from_gallery.py  retina_face_pytorch.py  retina_face_pytorch_trt.py
src/sinapsis_retina_face_trt/templates/retina_face/model_converters/: face_net_converter.py
webapps/: face_recognition_demo.py  gradio_live_demo.py  verification_mode_demo.py
